# bqnlsp

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.bqn  flake.nix  helpfiles.mk
editors/neovim/nvim-lspconfig/: README.md  bqnlsp.lua
editors/vscode/: README.md  package-lock.json  package.json
editors/vscode/src/: extension.ts
genhelp/: Cargo.toml
genhelp/src/: main.rs
lsp/: Cargo.toml  build.rs
lsp/src/: bqn.rs  diagnostics.rs  doc.rs  main.rs
