[package]
name = "bqnlsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.17.0"
cbqn = { git = "https://github.com/Detegr/cbqn-rs.git", branch = "wasm" }
regex = "1.7.0"

[build-dependencies]
fs_extra = "1.2.0"
